Home page setting

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://www.giteshwagh.com"
-title = "Home"
+title = "Gitesh Wagh"
 theme = "hugo-coder"
 languageCode = "en"
 defaultContentLanguage = "en"
