--- a/config.toml
+++ b/config.toml
@@ -179,7 +179,7 @@ weight = 5
 url = "contact/"
 
 [[languages.en.menu.main]]
-name = "Run Code"
+name = "Run Code🔥"
 weight = 4
 url = "runcode/"
 
